Stop tracking .env

--- a/Website/templates/Website/home.html
+++ b/Website/templates/Website/home.html
@@ -73,6 +73,8 @@
                 margin-top: 25px;
                 width: 260px;
                 height: 260px;
+                position: relative;
+                left: 92px;
             }
         }
 
@@ -128,12 +130,14 @@
 
         .btn-main {
             margin-top: 25px;
-            padding: 12px 30px;
+            padding: 7px 25px;
             border: none;
             border-radius: 12px;
             background: linear-gradient(45deg, #7ee8ff, #b57dff);
             color: #000;
             font-weight: 600;
+            position: relative;
+            left: -4px;
         }
 
 
