--- a/Website/templates/Website/project.html
+++ b/Website/templates/Website/project.html
@@ -150,8 +150,8 @@
     <nav>
         <div class="logo">Sujal Developer</div>
         <div class="nav-links">
-            <a href="#">Home</a>
-            <a href="#">Contact</a>
+            <a href="{% url 'Website:home'%}">Home</a>
+            <a href="{% url 'Website:email'%}">Contact</a>
         </div>
     </nav>
 
